Fix text width on mobile (#124)
Fix available text width on mobile for Product Title

--- a/src/Orckestra.Grocery.Website/UI.Package/Sass/Custom/Search/_product-tile.scss
+++ b/src/Orckestra.Grocery.Website/UI.Package/Sass/Custom/Search/_product-tile.scss
@@ -49,6 +49,10 @@
             line-height: $line-height-base;
             color: $gray-800;
         }
+        padding-right: 25px;
+        @include media-breakpoint-up(sm) {
+            padding-right: 0;
+        }
     }
     .product-tile-brand {
         white-space: nowrap;
